[workspace]
resolver = "2"
members = [
  "packages/btr-macros",
  "packages/math",
  "packages/multi-test",
  "packages/toolkit",
  "packages/storage/*",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
borsh = "0.10.3"
bincode2 = "2.0.1"
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.10" }
cosmwasm-schema = "1.2.5"
schemars = "0.8.9"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = "1.0"
ethnum = { git = "https://github.com/securesecrets/ethnum-rs", branch = "v1.1.10-secret" }
primitive-types = { version = "0.12.1", default-features = false }

nanoid = "0.4.0"
itertools = "0.10.1"
prost = "0.9"
anyhow = "1.0.41"
derivative = "2"

proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["derive", "full", "printing", "extra-traits"] }

rand = { version = "0.8.5", default-features = false }
rstest_reuse = "0.4.0"
rstest = "0.15.0"
criterion = { version = "0.3", features = [ "html_reports" ] }
paste = "1.0"
derive-from-ext = "0.2"
btr-macros = { path = "../btr_macros" }

serde_json = "1"
proptest = "1.0.0"

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
